# test-full-ci-cd

./: Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml  quality.yml  release.yml  version.yml
app/: app.py
scripts/: deploy-pipeline.sh
tests/: test_app_factory.py
